--- a/html/cadastro.html
+++ b/html/cadastro.html
@@ -21,8 +21,9 @@
         <p>Código Único: <span id="codigoUnico"></span></p>
         <button id="copyButton">Copiar Código</button>
     </div>
-    <script src="../js/script.js"></script>
+    
+    <!-- Incluindo a biblioteca Axios antes do seu script -->
     <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
-
+    <script src="../js/script.js"></script>
 </body>
 </html>
