Seu primeiro commit

--- a/html/cadastro.html
+++ b/html/cadastro.html
@@ -21,9 +21,10 @@
         <p>Código Único: <span id="codigoUnico"></span></p>
         <button id="copyButton">Copiar Código</button>
     </div>
-    
-    <!-- Incluindo a biblioteca Axios antes do seu script -->
+
+    <!-- Primeiro carregar a biblioteca Axios -->
     <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
+    <!-- Depois carregar seu script -->
     <script src="../js/script.js"></script>
 </body>
 </html>
