--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="../css/styles.css">
+    <link rel="stylesheet" href="css/styles.css">
     <title>Cadastro de Candidatos</title>
 </head>
 <body>
@@ -25,6 +25,6 @@
     <!-- Primeiro carregar a biblioteca Axios -->
     <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
     <!-- Depois carregar seu script -->
-    <script src="../js/script.js"></script>
+    <script src="js/script.js"></script>
 </body>
 </html>
