Seu primeiro commit

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/styles.css">
-    <title>Cadastro de Candidatos</title>
+    <title>Cadastro de Candidatos 1</title>
 </head>
 <body>
     <h1>Cadastro de Candidatos</h1>
